[package]
name = "siff"
version = "0.1.0"
edition = "2021"
description = "Interactive file browser with repomix and yek as supported parsing backends"
authors = ["Arvin <hello@arvinmir.com>"]
license = "MIT"
repository = "https://github.com/arvinmi/siff"
readme = "README.md"
keywords = ["serialization", "parsing", "tui", "git"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tiktoken-rs = "0.5"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
