[package]
name = "siff"
version = "0.1.0"
edition = "2021"
description = "File browser with repomix and yek as supported parsing backends"
authors = ["Arvin <hello@arvinmir.com>"]
license = "MIT"
repository = "https://github.com/arvinmi/siff"
readme = "README.md"
keywords = ["serialization", "parsing", "tui", "git"]
categories = ["parsing-tools", "filesystem", "development-tools", "command-line-utilities"]

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tiktoken-rs = "0.5"
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
